--- a/settings.gradle
+++ b/settings.gradle
@@ -12,5 +12,10 @@ dependencyResolutionManagement {
         mavenCentral()
     }
 }
+
 rootProject.name = "CreditCardRecognition"
 include ':app'
+include ':features:core'
+include ':features:MLKitImpl'
+include ':features:PaymentsClientsImpl'
+include ':features:CardIOImpl'
